--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@types/jasmine": "^2.2.29",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.33",
+    "@types/tweenjs": "^0.6.27",
     "angular2-template-loader": "^0.6.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^2.2.4",
     "codelyzer": "1.0.0-beta.3",
     "copy-webpack-plugin": "^4.0.0",
     "createjs-easeljs": "^0.8.2",
+    "createjs-tweenjs": "^0.6.0",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
