--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href /repos/chaos-experiment/",
     "lint": "ng lint",
     "publish": "node scripts/deploy.js"
   },
