--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Tests coming soon!\"",
     "build": "ng build --base-href /repos/chaos-experiment/",
     "lint": "ng lint",
-    "publish": "node scripts/deploy.js"
+    "deploy": "node scripts/deploy.js"
   },
   "private": true,
   "dependencies": {
